# DW1/controllers/GeneroController.js
@@ -3,8 +3,8 @@
 var utils = require('../utils/writer.js');
 var GeneroController = require('../service/GeneroControllerService');
 
-module.exports.retrieveGenero = function retrieveGenero (req, res, next) {
-  GeneroController.retrieveGenero()
+module.exports.retrieveGenero = function retrieveGenero (req, res, next, id) {
+  GeneroController.retrieveGenero(id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -13,8 +13,8 @@ module.exports.retrieveGenero = function retrieveGenero (req, res, next) {
     });
 };
 
-module.exports.retrieveGeneros = function retrieveGeneros (req, res, next, id) {
-  GeneroController.retrieveGeneros(id)
+module.exports.retrieveGeneros = function retrieveGeneros (req, res, next) {
+  GeneroController.retrieveGeneros()
     .then(function (response) {
       utils.writeJson(res, response);
     })
