# DW1/controllers/UserController.js
@@ -4,8 +4,8 @@ var utils = require('../utils/writer.js');
 var UserController = require('../service/UserControllerService');
 
 
-module.exports.retrieveUser = function retrieveUser (req, res, next) {
-  UserController.retrieveUser()
+module.exports.retrieveUser = function retrieveUser (req, res, next, id) {
+  UserController.retrieveUser(id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -14,8 +14,8 @@ module.exports.retrieveUser = function retrieveUser (req, res, next) {
     });
 };
 
-module.exports.retrieveUsers = function retrieveUsers (req, res, next, id, first_name, last_name, mail) {
-  UserController.retrieveUsers(id, first_name, last_name, mail)
+module.exports.retrieveUsers = function retrieveUsers (req, res, next) {
+  UserController.retrieveUsers()
     .then(function (response) {
       utils.writeJson(res, response);
     })
